--- a/demo/css/style.css
+++ b/demo/css/style.css
@@ -86,9 +86,9 @@ canvas{
 /* ---- particles.js container ---- */
 
 #particles-js{
-  width: 100%;
+  width: 25%;
   height: 100%;
-  background-color: #b61924;
+  background-color:   #1b2631;
   background-image: url('');
   background-size: cover;
   background-position: 50% 50%;
