--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ canvas{
 #particles-js{
   width: 25%;
   height: 100%;
-  background-color:   #1b2631;
+  background-color:   #000000;
   background-image: url('');
   background-size: cover;
   background-position: 50% 50%;
