--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,4 +1,4 @@
-/*******************************************************************************
+ /*******************************************************************************
  * Styles for the base elements of the theme.
  ******************************************************************************/
 
@@ -15,6 +15,7 @@ hr {
 table {
   td, th {
     color: var(--global-text-color);
+    text-align: left
   }
   td {
     font-size: 1rem;
@@ -480,8 +481,8 @@ footer.sticky-bottom {
     }
   }
   h2.year {
-    color: var(--global-divider-color);
-    border-top: 1px solid var(--global-divider-color);
+    color: var(--global-theme-color);
+    border-top: 1px solid var(--global-theme-color);
     padding-top: 1rem;
     margin-top: 2rem;
     margin-bottom: -2rem;
