update icon color

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -257,7 +257,7 @@ blockquote {
     font-size: 2rem;
     a {
       i::before {
-        color: var(--global-theme-color);
+        color: var(--global-text-color);
         transition-property: all 0.2s ease-in-out;
       }
       &:hover {
