--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -7,7 +7,7 @@
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$grey-color};
-  --global-theme-color: #{$blue-color-dark};
+  --global-theme-color: #{$red-color-pastel};
   --global-hover-color: #{$blue-color-dark};
   --global-footer-bg-color: #{$grey-color-dark};
   --global-footer-text-color: #{$grey-color-light};
@@ -38,8 +38,8 @@ html[data-theme='dark'] {
   --global-code-bg-color: #{$code-bg-color-dark};
   --global-text-color: #{$grey-color-light};
   --global-text-color-light: #{$grey-color-light};
-  --global-theme-color: #{$blue-color};
-  --global-hover-color: #{$blue-color};
+  --global-theme-color: #{$red-color-pastel};
+  --global-hover-color: #{$red-color-pastel};
   --global-footer-bg-color: #{$grey-color-light};
   --global-footer-text-color: #{$grey-color-dark};
   --global-footer-link-color: #{$black-color};
