--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -13,7 +13,7 @@
   --global-footer-text-color: #{$grey-color-light};
   --global-footer-link-color: #{$white-color};
   --global-distill-app-color: #{$grey-color};
-  --global-divider-color: rgba(0,0,0,.1);
+  --global-divider-color: #{$red-color-pastel};
   --global-card-bg-color: #{$white-color};
 
   .fa-sun {
@@ -40,11 +40,11 @@ html[data-theme='dark'] {
   --global-text-color-light: #{$grey-color-light};
   --global-theme-color: #{$red-color-pastel};
   --global-hover-color: #{$red-color-pastel};
-  --global-footer-bg-color: #{$grey-color-light};
-  --global-footer-text-color: #{$grey-color-dark};
-  --global-footer-link-color: #{$black-color};
+  --global-footer-bg-color: #{$grey-color-dark};
+  --global-footer-text-color: #{$grey-color-light};
+  --global-footer-link-color: #{$red-color-pastel};
   --global-distill-app-color: #{$grey-color-light};
-  --global-divider-color: #424246;
+  --global-divider-color: #{$red-color-pastel};
   --global-card-bg-color: #{$grey-900};
 
   .fa-sun {
